--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap-vue": "^2.23.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "express-fileupload": "^1.4.3",
     "mongoose": "^8.0.3"
   },
